logs/globusonline-transfer-api-client.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/globusonline'...
Listing './lib/python3.5/site-packages/globusonline/transfer'...
Listing './lib/python3.5/site-packages/globusonline/transfer/api_client'...
Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/__init__.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/__init__.py", line 247
    print ">>>REQUEST>>>:"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/globusonline/transfer/api_client/ca'...
Listing './lib/python3.5/site-packages/globusonline/transfer/api_client/examples'...
Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/examples/add-endpoint.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/examples/add-endpoint.py", line 84
    print "GC Setup Key: %s" % setup_key
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/examples/create_proxy.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/examples/create_proxy.py", line 28
    print "usage: %s proxy_file pubkey_file lifetime_hours" % sys.argv[0]
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/examples/delegate_proxy_activate.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/examples/delegate_proxy_activate.py", line 66
    print "Using x509_proxy implementation '%s'" % x509_proxy.implementation
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/examples/example.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/examples/example.py", line 41
    print "=== Before tutorial ==="
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/examples/myproxy_activate.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/examples/myproxy_activate.py", line 50
    print "Error: %s is required, please enter a value" \
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/goauth.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/goauth.py", line 72
    print "Globus Online Username: ",
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/globusonline/transfer/api_client/verified_https.py'...
***   File "./lib/python3.5/site-packages/globusonline/transfer/api_client/verified_https.py", line 202
    print r.status, r.reason
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/globusonline/transfer/api_client/x509_proxy'...
Listing './lib/python3.5/site-packages/globusonline_transfer_api_client-0.10.18.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
